added apple app association file, updated gitignore to ignore plugin folders except NewSpring as we do not want RockShop files under version control

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ pageviews.csv
 RockLogster.csv
 Quartz.xml
 StyleCop.Cache
+.vscode
 
 #specific folders
 [Oo]bj/
@@ -29,7 +30,8 @@ RockWeb/App_Data/PackageStaging
 *.sln.GhostDoc.xml
 .vs/
 .localhistory/
-
+/RockWeb/Plugins/*
+!/RockWeb/Plugins/cc_newspring
 Packages/*
 
 # javascript deps
