- Fixed the following issues in V2 Giving   - Declined transactions weren't getting detected correctly   - Status and Settlement information of a downloaded payment wasn't getting stored correctly   - The amount of a downloaded transaction didn't include the cents portion of the transaction anount   - Refunds/Voids would return a 404   - Refunds/Voids wouldn't set the TransactionCode correctly   - Refunds/Voids would get an error when querying for the transaction status   - Transaction amounts over $12 million would get an exception   - Declined message wouldn't get reset correctly after clicking 'back' on the personal information step in Transaction Entry

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -454,6 +454,7 @@
     <Compile Include="Reporting\ReportTemplateBuilder.cs" />
     <Compile Include="Utility\ExtensionMethods\ExpandoObjectExtensions.cs" />
     <Compile Include="Utility\LazyDictionary.cs" />
+    <Compile Include="Utility\SingleOrArrayJsonConverter.cs" />
     <Compile Include="Web\Cache\Entities\DocumentTypeCache.cs" />
     <Compile Include="Web\Cache\Entities\PersistedDatasetCache.cs" />
     <Compile Include="Web\Cache\Entities\Obsolete\PersonBadgeCache.cs" />
