added fuse and kidspring checkin themes back, added giving lava templates, updated accordion lava template to have up/down arrows for a more clear user experience

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,10 @@ RockWeb/App_Data/MobileAppBundles
 .localhistory/
 TestResults/
 
+
 /RockWeb/Plugins/*
 !/RockWeb/Plugins/cc_newspring
+/RockWeb/Plugins/cc_newspring/AttendedCheckin
 Packages/*
 
 # javascript deps
